k8s/ship/cert-manager/rendered.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from-secret: cert-manager/cert-manager-webhook-tls
  labels:
    app: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: webhook
    helm.sh/chart: cert-manager-v0.13.0
  name: cert-manager-webhook
webhooks:
- clientConfig:
    service:
      name: cert-manager-webhook
      namespace: cert-manager
      path: /mutate
  failurePolicy: Fail
  name: webhook.cert-manager.io
  rules:
  - apiGroups:
    - cert-manager.io
    - acme.cert-manager.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*/*'
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from-secret: cert-manager/cert-manager-webhook-tls
  labels:
    app: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: webhook
    helm.sh/chart: cert-manager-v0.13.0
  name: cert-manager-webhook
webhooks:
- clientConfig:
    service:
      name: cert-manager-webhook
      namespace: cert-manager
      path: /mutate
  failurePolicy: Fail
  name: webhook.cert-manager.io
  namespaceSelector:
    matchExpressions:
    - key: cert-manager.io/disable-validation
      operator: NotIn
      values:
      - "true"
    - key: name
      operator: NotIn
      values:
      - cert-manager
  rules:
  - apiGroups:
    - cert-manager.io
    - acme.cert-manager.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*/*'
  sideEffects: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: webhook
    helm.sh/chart: cert-manager-v0.13.0
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  ports:
  - name: https
    port: 443
    targetPort: 10250
  selector:
    app: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: webhook
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cert-manager
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: cert-manager
    helm.sh/chart: cert-manager-v0.13.0
  name: cert-manager
  namespace: cert-manager
spec:
  ports:
  - port: 9402
    protocol: TCP
    targetPort: 9402
  selector:
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/name: cert-manager
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cainjector
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: cainjector
    helm.sh/chart: cert-manager-v0.13.0
  name: cert-manager-cainjector
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cainjector
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/managed-by: Tiller
      app.kubernetes.io/name: cainjector
  template:
    metadata:
      annotations: null
      labels:
        app: cainjector
        app.kubernetes.io/instance: cert-manager
        app.kubernetes.io/managed-by: Tiller
        app.kubernetes.io/name: cainjector
        helm.sh/chart: cert-manager-v0.13.0
    spec:
      containers:
      - args:
        - --v=2
        - --leader-election-namespace=cert-manager
        image: quay.io/jetstack/cert-manager-cainjector:v0.13.0
        imagePullPolicy: IfNotPresent
        name: cert-manager
        resources: {}
      serviceAccountName: cert-manager-cainjector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: webhook
    helm.sh/chart: cert-manager-v0.13.0
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/managed-by: Tiller
      app.kubernetes.io/name: webhook
  template:
    metadata:
      annotations: null
      labels:
        app: webhook
        app.kubernetes.io/instance: cert-manager
        app.kubernetes.io/managed-by: Tiller
        app.kubernetes.io/name: webhook
        helm.sh/chart: cert-manager-v0.13.0
    spec:
      containers:
      - args:
        - --v=2
        - --secure-port=10250
        - --tls-cert-file=/certs/tls.crt
        - --tls-private-key-file=/certs/tls.key
        image: quay.io/jetstack/cert-manager-webhook:v0.13.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /livez
            port: 6080
            scheme: HTTP
        name: cert-manager
        readinessProbe:
          httpGet:
            path: /healthz
            port: 6080
            scheme: HTTP
        resources: {}
        volumeMounts:
        - mountPath: /certs
          name: certs
      serviceAccountName: cert-manager-webhook
      volumes:
      - name: certs
        secret:
          secretName: cert-manager-webhook-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cert-manager
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: cert-manager
    helm.sh/chart: cert-manager-v0.13.0
  name: cert-manager
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-manager
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/managed-by: Tiller
      app.kubernetes.io/name: cert-manager
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9402"
        prometheus.io/scrape: "true"
      labels:
        app: cert-manager
        app.kubernetes.io/instance: cert-manager
        app.kubernetes.io/managed-by: Tiller
        app.kubernetes.io/name: cert-manager
        helm.sh/chart: cert-manager-v0.13.0
    spec:
      containers:
      - args:
        - --v=2
        - --cluster-resource-namespace=$(POD_NAMESPACE)
        - --leader-election-namespace=cert-manager
        - --issuer-ambient-credentials
        - --webhook-namespace=$(POD_NAMESPACE)
        - --webhook-ca-secret=cert-manager-webhook-ca
        - --webhook-serving-secret=cert-manager-webhook-tls
        - --webhook-dns-names=cert-manager-webhook,cert-manager-webhook.cert-manager,cert-manager-webhook.cert-manager.svc
        image: quay.io/jetstack/cert-manager-controller:v0.13.0
        imagePullPolicy: IfNotPresent
        name: cert-manager
        ports:
        - containerPort: 9402
          protocol: TCP
        resources: {}
      serviceAccountName: cert-manager
